--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./prachi.jpg">
     <style>
         .video-container {
             position: relative;
@@ -20,7 +21,7 @@
             border: none;
         }
     </style>
-    <title>Document</title>
+    <title>Happy Birthday Prachi</title>
 </head>
 <body>
     <div class="video-container">
