--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Like Button with Count -->
     <button id="likeButton" onclick="toggleLike()">Wish to Pricess</button>
-    <span id="likeCount">500</span> Wishess
+    <span id="likeCount">500</span>Wishes
 
     <script>
         let likeCount = 500;
